tests222/tests2/test236.out
lli: <stdin>:1:1: error: expected top-level entity
line 3: variable j3tK7qPOjie is not defined
^
